--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <h1>Tecnologia Y</h1>
         <h2>Potencia tus equipos para mejor rendimiento</h2>
       </section>
+      <div class="colab"><a href="#">Colabora con nosotros</a></</div>
       <div class="wave" style="height: 150px; overflow: hidden;">
         <svg
           viewBox="0 0 500 150"
